sample/retrieveUnpackaged/objects/Future_Address__c.object
<CustomObject>
    <description>Captures Future Address information</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Customer for which the future address will apply to.</description>
        <inlineHelpText>The Customer for which the future address will apply to.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Future Addresses</relationshipLabel>
        <relationshipName>Future_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicable_Date__c</fullName>
        <description>When the Future Address details become applicable</description>
        <label>Applicable Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Account_ID__c</fullName>
        <label>Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <label>Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Future Addresses</relationshipLabel>
        <relationshipName>Future_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Future City to mail to</description>
        <inlineHelpText>Future City to mail to, as per logged request</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Future Country to mail to, as per logged request</description>
        <inlineHelpText>Future Country to mail to</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPID__c</fullName>
        <description>Future DPID Reference</description>
        <inlineHelpText>Future DPID Reference</inlineHelpText>
        <label>DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that the Future Address change is done</description>
        <inlineHelpText>Flag to indicate that the Future Address change is done</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Future Postal Code to mail to, as per logged request</description>
        <inlineHelpText>Future Postal Code to mail to, as per logged request</inlineHelpText>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field to trigger the future address for processing</description>
        <label>Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Future State to mail to, as per logged request</description>
        <inlineHelpText>Future City to mail to</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Future Street Address</description>
        <inlineHelpText>Future Street Address</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated_Touchpoints_Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Touchpoints__c</fullName>
        <label>Updated_Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Future Address</label>
    <nameField>
        <displayFormat>F{000000}</displayFormat>
        <label>Future Address #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Applicable_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( NOT($User.ProfileId  = &apos;00e90000000RZvy&apos;), Applicable_Date__c  &lt;= Today() &amp;&amp;  Done__c == false)</errorConditionFormula>
        <errorMessage>Applicable date can only be in the future.</errorMessage>
    </validationRules>
</CustomObject>